--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-8 col-xs-12">
         <div class="prs_bottom_footer_cont_wrapper">
-          <p>Copyright 2021 <a href="#">Touch Cinema</a> . 18CK1 <a href="#">HCMUS</a>
+          <p>Copyright 2024 <a href="#">Touch Cinema</a> . 22HCB <a href="#">HCMUS</a>
           </p>
         </div>
       </div>
